# flask-metamask-signature-example

./: .gitignore  README.md  app.py  pyproject.toml
templates/: index.html
